Bug 282150 - artifact in leftmost icon in windowstrip while scrolling
Summary: artifact in leftmost icon in windowstrip while scrolling
Status: RESOLVED FIXED
Alias: None
Product: Active
Classification: Unmaintained
Component: Contour activity switcher (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: unscheduled
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-16 15:23 UTC by Javier Llorente
Modified: 2011-09-19 15:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Javier Llorente 2011-09-16 15:23:50 UTC
Version:           unspecified (using Devel) 
OS:                Linux

The thumbnail of the homescreen is not displayed correctly while scrolling on the task switcher horizontally.

Reproducible: Always

Steps to Reproduce:
Tap on the top bar and try to scroll on the task switcher horizantally.
Note: the thumbnail of the homescreen is displayed correctly if you open a app full screen.


Expected Results:  
The homescreen thumbnail should be displayed correctly.
Comment 1 Javier Llorente 2011-09-16 15:33:31 UTC
Tested on 2011-09-16-12-02-meego-plasma-active-testing-USB-live.iso
Comment 2 Sebastian Kügler 2011-09-19 15:10:39 UTC
Git commit 14d7d643aa1498afa04a20145fc7f19451584672 by Sebastian Kügler.
Committed on 19/09/2011 at 17:07.
Pushed by sebas into branch 'master'.

Repaint old area of the thumbnail

Fixes repaint issue in Active's windowstrip.

Made up by Martin

BUG:282150

M  +1    -1    kwin/effects/taskbarthumbnail/taskbarthumbnail.cpp

http://commits.kde.org/kde-workspace/14d7d643aa1498afa04a20145fc7f19451584672
Comment 3 Sebastian Kügler 2011-09-19 15:19:47 UTC
Git commit e11273f75c020cdb3797da73b0523dbc7b0cb250 by Sebastian Kügler.
Committed on 19/09/2011 at 17:07.
Pushed by sebas into branch 'KDE/4.7'.

Repaint old area of the thumbnail

Fixes repaint issue in Active's windowstrip.

Made up by Martin

BUG:282150

backported from master

M  +1    -1    kwin/effects/taskbarthumbnail/taskbarthumbnail.cpp

http://commits.kde.org/kde-workspace/e11273f75c020cdb3797da73b0523dbc7b0cb250