Repaint old area of the thumbnail

Fixes repaint issue in Active's windowstrip.

Made up by Martin

BUG:282150